简单工厂和抽象工厂
简单工厂和抽象工厂的设计和coding