@@ -1,7 +1,9 @@
 package com.mashibing.tank;
 
 import java.awt.*;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Random;
+import java.lang.Class;
 
 public class Tank {
     public int getX() {
@@ -78,12 +80,16 @@ public class Tank {
             String goodFSName = PropertyMgr.get("goodFS").toString();
 //            这样就把名字代表的类load到内存了,这个类要全路径才能识别:这就是反射.
             try {
-                fs = (FireStrategy) Class.forName(goodFSName).newInstance();
+                fs = (FireStrategy) Class.forName(goodFSName).getDeclaredConstructor().newInstance();
             } catch (InstantiationException e) {
                 throw new RuntimeException(e);
             } catch (IllegalAccessException e) {
                 throw new RuntimeException(e);
             } catch (ClassNotFoundException e) {
+                throw new RuntimeException(e);
+            } catch (InvocationTargetException e) {
+                throw new RuntimeException(e);
+            } catch (NoSuchMethodException e) {
                 throw new RuntimeException(e);
             }
         } else {
